# analysis_using_episcanner

./: README.md  gen_article_figures.ipynb  pyproject.toml  train_HGBR_model_casos.ipynb
.ipynb_checkpoints/: train_HGBR_model-checkpoint.ipynb  utils-checkpoint.py
data/: ENSO_meiv2.csv  RJ_dengue.parquet  combine_features.ipynb
saved_models/: hist_gradient_boosting_reg_ceo.pkl  hist_gradient_boosting_reg_ne.pkl  hist_gradient_boosting_reg_no.pkl  hist_gradient_boosting_reg_sud.pkl  hist_gradient_boosting_reg_sul.pkl
