[tool.poetry]
name = "repo-episcanner-paper"
version = "0.1.0"
description = "code repository for paper"
authors = ["Eduardo Correa Araújo","Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "CC-by"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
shap = "^0.46.0"
joblib = "^1.4.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
numpy = "^2.0.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
